update css for mobile fixes plus dark mode on contact page

--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,3 @@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* Main/Overall Pages*/
 * {
   margin: 0;
@@ -41,7 +16,7 @@ body {
 nav {
   position: fixed;
   top: 0;
-  width: 100%;  /* <- Add the missing semicolon! */
+  width: 100%;
   z-index: 999;
   background-color: #ffffff;
   padding: 20px 0;
@@ -62,6 +37,8 @@ nav {
   list-style: none;
   display: flex;
   gap: 20px;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .nav-links a {
@@ -264,10 +241,15 @@ section {
 
   .hero-image {
     margin-top: 20px;
+    flex: 1 1 100%;
+    max-width: 90%;
   }
 
   #hero {
-    padding-top: 120px;
+    padding-top: 160px;
+    min-height: auto;
+    height: auto
+
   }
 }
 
@@ -379,8 +361,9 @@ section {
 
 /* projects page*/
 #projects{
+  padding-top: 120px;
   background-color: #f1f5f0;
-  padding: 60px 20px;
+ /* padding: 60px 20px;*/
 }
 
 .section-intro {
